# rogomatic

./: README.md
archives/: README.md
archives/goblins/: README.md
archives/rogue/ant/patches/: rogue-5.4.4-and-r1.1.2-branden.diff
rogomatic/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac
rogomatic/doc/: README.0  amulet.photo  rogue.commands  terminfo.vt100
rogomatic/src/: arms.c  command.c  config.c  database.c  datesub.c  datesub.l  debug.c  debuglog.c  explore.c  findscore.c  gene.c  getroguetoken.c  globals.h  histplot.c  io.c  learn.c  ltm.c  main.c  mess.c  monsters.c  pack.c  rand.c  replay.c  rgmplot.c  rooms.c  scorefile.c  search.c  setup.c  stats.c  strategy.c  survival.c  tactics.c  things.c  titlepage.c  types.h  utility.c  worth.c
